[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/jsonrpc-core/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-core"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = { git = "https://github.com/mesalock-linux/log-sgx", default-features = false }
futures = { git = "https://github.com/mesalock-linux/futures-rs-sgx" }
serde        	  = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"]  }
serde_json        = { git = "https://github.com/mesalock-linux/serde-json-sgx", features = ["alloc"]}
serde_derive      = { git = "https://github.com/mesalock-linux/serde-sgx" }

[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]
default = ["std"]
std = [
	"log/std",
	"serde/std",
	"serde_json/std",
	"futures/std",
]

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}