[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Transport agnostic rust implementation of JSON-RPC 2.0 Specification."
documentation = "https://docs.rs/jsonrpc-core/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpc"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
name = "jsonrpc-core"
repository = "https://github.com/paritytech/jsonrpc"
version = "18.0.0"

categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket",
]

[dependencies]
log = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = ["executor"] }
serde = { version = "1.0", default-features = false, features = ["derive"]  }
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
serde_derive = { version = "1.0" }

[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]
default = ["std"]
std = [
	"log/std",
	"serde/std",
	"serde_json/std",
	"futures/std",
]

[badges]
travis-ci = { repository = "paritytech/jsonrpc", branch = "master"}